@@ -1,9 +1,8 @@
 package cn.zjw.mrs.utils;
 
 import org.springframework.web.multipart.MultipartFile;
-import sun.misc.BASE64Decoder;
-
 import java.io.*;
+import java.util.Base64;
 import java.util.Random;
 
 /**
@@ -56,13 +55,15 @@ public class Base64DecodedMultipartFile implements MultipartFile {
     }
 
     @Override
-    public InputStream getInputStream() throws IOException {
+    public java.io.InputStream getInputStream() throws IOException {
         return new ByteArrayInputStream(imgContent);
     }
 
     @Override
     public void transferTo(File dest) throws IOException, IllegalStateException {
-        new FileOutputStream(dest).write(imgContent);
+        try (FileOutputStream fos = new FileOutputStream(dest)) {
+            fos.write(imgContent);
+        }
     }
 
     /**
@@ -75,9 +76,8 @@ public class Base64DecodedMultipartFile implements MultipartFile {
         try {
             String[] baseStrs = base64.split(",");
 
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] b = new byte[0];
-            b = decoder.decodeBuffer(baseStrs[1]);
+            // 使用 java.util.Base64 替代 sun.misc.BASE64Decoder
+            byte[] b = Base64.getDecoder().decode(baseStrs[1]);
 
             for (int i = 0; i < b.length; ++i) {
                 if (b[i] < 0) {
@@ -86,7 +86,7 @@ public class Base64DecodedMultipartFile implements MultipartFile {
             }
 
             return new Base64DecodedMultipartFile(b, baseStrs[0]);
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
             return null;
         }
@@ -97,45 +97,33 @@ public class Base64DecodedMultipartFile implements MultipartFile {
      * @param fileContent 源文件
      * @param dirPath 本地路径
      */
-    public static void approvalFile(MultipartFile fileContent, String dirPath){
-        OutputStream os = null;
-        InputStream inputStream = null;
-        String fileName = null;
-        try {
-            inputStream = fileContent.getInputStream();
-            fileName = fileContent.getOriginalFilename();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        try {
+    public static void approvalFile(MultipartFile fileContent, String dirPath) {
+        try (InputStream inputStream = fileContent.getInputStream()) {
+            String fileName = fileContent.getOriginalFilename();
             String path = dirPath;
+
             // 2、保存到临时文件
             // 1K的数据缓冲
             byte[] bs = new byte[1024];
             // 读取到的数据长度
             int len;
+
             // 输出的文件流保存到本地文件
             File tempFile = new File(path);
             if (!tempFile.exists()) {
                 tempFile.mkdirs();
             }
-            os = new FileOutputStream(tempFile.getPath() + File.separator + fileName);
-            // 开始读取
-            while ((len = inputStream.read(bs)) != -1) {
-                os.write(bs, 0, len);
+
+            try (FileOutputStream os = new FileOutputStream(tempFile.getPath() + File.separator + fileName)) {
+                // 开始读取
+                while ((len = inputStream.read(bs)) != -1) {
+                    os.write(bs, 0, len);
+                }
             }
         } catch (IOException e) {
             e.printStackTrace();
         } catch (Exception e) {
             e.printStackTrace();
-        } finally {
-            // 完毕，关闭所有链接
-            try {
-                os.close();
-                inputStream.close();
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
         }
     }
 }
